--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "amazon-cognito-identity-js": "^2.0.3",
+    "angularfire2": "^5.0.0-rc.6.0",
+    "aws-sdk": "^2.224.1",
     "core-js": "^2.4.1",
+    "firebase": "^4.12.1",
+    "ng2-ace-editor": "^0.3.4",
+    "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -31,7 +39,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.106",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
